Remove Seam 2.1.2 hack (Seam 2.2.0.GA works if you uncomment loadPersistenceUnits in the build.properties)